--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width= device-width, initial-scale=1">
-        <title>About</title>
+        <title>Contact Us</title>
         <link rel="stylesheet" href="style2.css">
     </head>
     <body>
@@ -32,7 +32,7 @@
             </div>
 
             <div class="container">
-                <form action="file:///C:/Users/bida20-046/OneDrive%20-%20Botswana%20Accountancy%20College/Documents/WMDassignment/thankyou.html">
+                <form action="thankyou.html">
                     <label for="fname">First Name:</label>
                     <input type="text" id="fname"><br><br>
 
